Revert "SOLR-16427: Evaluate and fix errorprone rules - DoubleBraceInitialization"
This reverts commit a27148443d19946901ceb27cab16defb011aec71.